12_api_gateway/scala/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
  namespace: otus-msa-api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://auth-app.otus-msa-api-gateway.svc.cluster.local/check
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User"
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /users(/|$)(.*) # Направляем все запросы к user-app
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-app
  namespace: otus-msa-api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /auth(/|$)(.*) # Направляем все запросы /auth к auth-app. Создаем отдельный Ingress изза аннотаций rewrite
            pathType: Prefix
            backend:
              service:
                name: auth-app
                port:
                  number: 80
